# goit-algo2-hw-06

./: README.md  pyproject.toml
activate/: pyproject.toml
src/goit_algo2_hw_06/: task.py
